--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -1946,3 +1946,117 @@ body .el-loading-spinner .el-loading-text{
     }
 }
 
+#albumSelect{
+    .oprateOut {
+        background-color: #efefef;
+        border-bottom: 1px solid #d3d3d3;
+        margin-bottom: 1px;
+        .oprateBox {
+            display: -webkit-box;
+            display: -moz-box;
+            display: -ms-flexbox;
+            display: -webkit-flex;
+            display: flex;
+            justify-content: space-between;
+            -o-justify-content: space-between;
+            -moz-justify-content: space-between;
+            -ms-justify-content: space-between;
+            -webkit-justify-content: space-between;
+            width: 1280px;
+            margin: 0 auto;
+            height: 50px;
+            .space {
+                width: 40%;
+            }
+            .titleName {
+                display: -webkit-box;
+                display: -moz-box;
+                display: -ms-flexbox;
+                display: -webkit-flex;
+                display: flex;
+                width: 20%;
+                justify-content: center;
+                -o-justify-content: center;
+                -moz-justify-content: center;
+                -ms-justify-content: center;
+                -webkit-justify-content: center;
+                padding-top: 15px;
+            }
+            .oprateBtn {
+                display: -webkit-box;
+                display: -moz-box;
+                display: -ms-flexbox;
+                display: -webkit-flex;
+                display: flex;
+                justify-content: flex-end;
+                -o-justify-content: flex-end;
+                -moz-justify-content: flex-end;
+                -ms-justify-content: flex-end;
+                -webkit-justify-content: flex-end;
+                width: 40%;
+                padding-top: 11px;
+                .btnStyle {
+                    display: -webkit-box;
+                    display: -moz-box;
+                    display: -ms-flexbox;
+                    display: -webkit-flex;
+                    display: flex;
+                    width: 80px;
+                    height: 30px;
+                    border: 1px solid #adadad;
+                    border-radius: 3px;
+                    cursor: pointer;
+                    padding-left: 5%;
+                    padding-top: 4px;
+                }
+                .create {
+                    width: 150px;
+                    margin-left: 20px;
+                    padding-left: 8%;
+                }
+            }
+        }
+    }
+    .container-box {
+        background-color: #efefef;
+        padding: 145px 0 505px 0;
+        .container-fluid {
+            padding-right: 15px;
+            padding-left: 15px;
+            margin-right: auto;
+            margin-left: auto;
+            box-sizing: border-box;
+            height: 242px;
+            
+            .themeBox {
+               width: 1172px;
+               height: 100%;
+               margin: 0 auto;
+               .themeDiv {
+                    width: 25%;
+                    float: left;
+                    .img_div {
+                        text-align: center;
+                        margin-bottom: 10px;
+                        border: 3px solid transparent;
+                        padding: 3px;
+                        cursor: pointer;
+                        width: 223px;
+                    }
+                    .active{
+                        background: #fff;
+                        border: 1px solid;
+                    }
+                    .styleId {
+                        display: none;
+                    }
+                }
+                .text-center {
+                    text-align: center;
+                }
+             }
+            
+
+        }
+    }
+}
