--- a/src/components/component/oddPrictureEdit/sass/addEdit.scss
+++ b/src/components/component/oddPrictureEdit/sass/addEdit.scss
@@ -23,7 +23,7 @@
                         width: 100%;
                         height: 100%;
                         left: 0;top: 0;
-                        background-image: url(http://test.artup.com/builder/imgs/common/tip.png);
+                        background-image: url(http://image2.artup.com/static/pc/imgs/common/tip.png);
                         background-position: center;
                         background-color: #e9e9e9;
                         background-repeat: no-repeat;
