--- a/src/components/component/oddPrictureEdit/sass/addEdit.scss
+++ b/src/components/component/oddPrictureEdit/sass/addEdit.scss
@@ -9,6 +9,53 @@
             width: 1040px;
             margin: 0 auto;
             position: relative;
+            font-size: 14px;
+           #div_drap{
+                color: #333;
+                background: #fff;
+                position: absolute;
+                top: -6px;
+                right: -50px;
+                width: 200px;
+                height: 400px !important;
+                z-index: 8;
+                border: 1px solid #ccc;
+                width: 12.8125rem;
+                height: 12.8125rem;
+                box-shadow: 0 10px 10px -6px #777;
+                cursor: move;
+                position: absolute; margin: 0px;
+
+                .titleBox {
+                    width: 100%;
+                    height: 30px;
+                    line-height: 30px;
+                    text-align: center;
+                    border-bottom: 1px solid #d7d7d7;
+                    .titleClose {
+                        position: absolute;
+                        right: 0;
+                        top: 0;
+                        width: 30px;
+                        height: 30px;
+                        cursor: pointer;
+                       > i {
+                            font-size: 30px;
+                            color: #ccc;
+                        }
+                    }
+                }
+                .checkBS_b {
+                    width: 90%;
+                    height: 369px;
+                    margin: 20px auto;
+                    overflow-y: auto;
+                    background: #fff;
+                    >select{
+                      width: 100%;  
+                    }
+                }
+           }
             .waikuang {
                 background-size: 100% 100%;
                 background-repeat: no-repeat;
