--- a/src/components/component/oddPrictureEdit/sass/addEdit.scss
+++ b/src/components/component/oddPrictureEdit/sass/addEdit.scss
@@ -47,13 +47,23 @@
                 }
                 .checkBS_b {
                     width: 90%;
-                    height: 369px;
+                    height: 80%;
                     margin: 20px auto;
-                    overflow-y: auto;
                     background: #fff;
                     >select{
                       width: 100%;  
                     }
+                }
+                #selec{
+                    display: none;
+                    text-align: center;
+                    >ul li{
+                        border: 1px solid greenyellow;
+                    }
+                }
+                .selectClickBox{
+                    border: 1px solid red;
+                    text-align: center;
                 }
            }
             .waikuang {
