--- a/src/page/poster/poster.scss
+++ b/src/page/poster/poster.scss
@@ -139,6 +139,10 @@
                 text-align: center;
                 line-height: 59px;
             }
+            .sizeActive{
+                border: 3px solid #2a2a2a;
+                box-sizing: border-box;
+            }
         }
         .frameBox {
            
