--- a/src/components/component/oddPrictureEdit/sass/addEdit.scss
+++ b/src/components/component/oddPrictureEdit/sass/addEdit.scss
@@ -74,6 +74,12 @@
                 position: relative;
                 .drapBox{
                     overflow: hidden;
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    bottom: 0;
+                    left: 0;
+                    margin: auto auto;
                     .div_alert{
                        position: absolute; 
                         z-index: 1;
