--- a/src/page/framed-pictures/framed-pictures.scss
+++ b/src/page/framed-pictures/framed-pictures.scss
@@ -48,11 +48,20 @@
         position: relative;
         float: left;
         box-sizing: border-box;
-         #picContainer{
+         .picContainer{
             border: 1px solid red;
             position: absolute;
             bottom: 0px;
             left: 0px;
+            background-position: center !important;
+            background-size: 100% 100% !important;
+         }
+         .picContainerTwo{
+            border: 1px solid red;
+            position: absolute;
+            top: 0px;
+            right: 100px !important;
+            left: inherit;
             background-position: center !important;
             background-size: 100% 100% !important;
          }
@@ -139,6 +148,10 @@
                 text-align: center;
                 line-height: 59px;
             }
+             .sizeActive{
+                border: 3px solid #2a2a2a;
+                box-sizing: border-box;
+            }
         }
         .frameBox {
            
@@ -161,6 +174,11 @@
                     background-size: 100% 100%;
                     background-repeat: no-repeat;
                     background-position: center;
+                }
+                .typeActive{
+                    border: 3px solid #a00912;
+                    border-radius: 5px;
+                    box-sizing: border-box;
                 }
                 .k1_Foot1frame_click {
                     border-radius: 5px;
