--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -988,8 +988,11 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                         font-size:54px;
                         color: #ccc;
                         cursor: pointer;
-                        top: -8px;
+                        top: -48px;
                         right: -4px;
+                    }
+                    >.title_msg{
+                        
                     }
                 }
                 .img_size_border{
