--- a/src/components/component/oddPrictureEdit/sass/addEdit.scss
+++ b/src/components/component/oddPrictureEdit/sass/addEdit.scss
@@ -1,7 +1,7 @@
 #oddEdit{
     width: 100%;
     height: 800px;
-    background: green;
+    background: #efefef;
     .comtent_chanpin {
         width: 100%;
         background: #efefef;
