--- a/src/page/framed-pictures/framed-pictures.scss
+++ b/src/page/framed-pictures/framed-pictures.scss
@@ -49,7 +49,6 @@
         float: left;
         box-sizing: border-box;
          .picContainer{
-            border: 1px solid red;
             position: absolute;
             bottom: 0px;
             left: 0px;
@@ -57,13 +56,13 @@
             background-size: 100% 100% !important;
          }
          .picContainerTwo{
-            border: 1px solid red;
             position: absolute;
             top: 0px;
             right: 100px !important;
             left: inherit;
             background-position: center !important;
             background-size: 100% 100% !important;
+            width: 324px;height: 324px;
          }
         .boxA{
             width: 260px;
