--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -1065,10 +1065,26 @@ html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
                         font-size:54px;
                         color: #ccc;
                         cursor: pointer;
-                        top: -48px;
+                        top: -10px;
                         right: -4px;
                     }
                     >.title_msg{
+                        
+                    }
+                    .text{
+                        position: absolute;
+                        bottom: 5px;
+                        text-align: center;
+                        font-size: 12px;
+                        color: #fff;
+                    }
+                    &:hover{
+                        >i{
+                            color: #de6d74;
+                        }
+                        .text{
+                            color: #de6d74;
+                        }
                         
                     }
                 }
