--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -155,7 +155,7 @@ html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
                     text-align: center;
                     background: #efefef;
                     color: #333;
-                    left: 40%;
+                    left: 40% ;
            }
         }
         
@@ -163,39 +163,39 @@ html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
     
    //封面的样式   
    .bbs_bg_blue{ //宝宝书蓝色
-        background: url(http://image2.artup.com/static/img/xsg_lsfm.jpg) no-repeat;
-        background-size: 100% 100%;
+        background: url(http://image2.artup.com/static/img/xsg_lsfm.jpg) no-repeat !important;
+        background-size: 100% 100% !important;
    }
     .bbs_bg_blue_fd{
-        background: url(http://image2.artup.com/static/img/xsg_lsfd.jpg);
-        background-size: 100% 100%;
+        background: url(http://image2.artup.com/static/img/xsg_lsfd.jpg) !important;
+        background-size: 100% 100% !important;
     }
-    .bbs_bg_blue_fm{background: #107669;}
+    .bbs_bg_blue_fm{background: #107669 !important;}
     .bbs_bg_red{ //宝宝书红色
-        background: url(http://image2.artup.com/static/img/xsg_fsfm.jpg);
-        background-size: 100% 100%;
+        background: url(http://image2.artup.com/static/img/xsg_fsfm.jpg) !important;
+        background-size: 100% 100% !important;
     }
     .bbs_bg_red_fd{
-        background: url(http://image2.artup.com/static/img/xsg_fsfd.jpg);
-        background-size: 100% 100%;
+        background: url(http://image2.artup.com/static/img/xsg_fsfd.jpg) !important;
+        background-size: 100% 100% !important;
     }
-    .bbs_bg_red_fm{background: #eb6621;}
+    .bbs_bg_red_fm{background: #eb6621 !important;}
     
     .bbs_bg_orange{//宝宝书橙色
-        background: url(http://image2.artup.com/static/img/xsg_csfm.jpg);
-        background-size: 100% 100%;
+        background: url(http://image2.artup.com/static/img/xsg_csfm.jpg) !important;
+        background-size: 100% 100% !important;
     }
-    .bbs_bg_orange_fd{background: #c52d6b;} 
-    .bbs_bg_orange_fm{background: #eb6621;}
+    .bbs_bg_orange_fd{background: #c52d6b !important;} 
+    .bbs_bg_orange_fm{background: #eb6621 !important;}
     .bbs_bg_green{//宝宝书绿色
-        background: url(http://image2.artup.com/static/img/xsg_lvsfm.jpg);
-        background-size: 100% 100%;
+        background: url(http://image2.artup.com/static/img/xsg_lvsfm.jpg) !important;
+        background-size: 100% 100% !important;
     }
     .bbs_bg_green_fd{
-        background: url(http://image2.artup.com/static/img/xsg_lvsfd.jpg);
-        background-size: 100% 100%;
+        background: url(http://image2.artup.com/static/img/xsg_lvsfd.jpg) !important;
+        background-size: 100% 100% !important;
     }
-    .bbs_bg_green_fm{background: #283e6f;}  
+    .bbs_bg_green_fm{background: #283e6f !important;}  
     
     
 .firstPage,.lastPage{ //首页和尾页书皮的样式
