--- a/src/components/component/oddPrictureEdit/sass/addEdit.scss
+++ b/src/components/component/oddPrictureEdit/sass/addEdit.scss
@@ -14,8 +14,8 @@
                 color: #333;
                 background: #fff;
                 position: absolute;
-                top: -6px;
-                right: -50px;
+                top: 92px;
+                right: -175px;
                 width: 200px;
                 height: 400px !important;
                 z-index: 8;
@@ -67,8 +67,9 @@
                 }
            }
             .waikuang {
-                background-size: 100% 100%;
-                background-repeat: no-repeat;
+                background-size: 100% 100% !important;
+                background-repeat: no-repeat !important;
+                width: 520px; height: 620px;
                 margin: 50px auto;
                 overflow: visible;
                 position: relative;
