--- a/src/components/component/oddPrictureEdit/sass/addEdit.scss
+++ b/src/components/component/oddPrictureEdit/sass/addEdit.scss
@@ -276,6 +276,7 @@
       position: relative;
       bottom: 0;
       left: 0;
+      z-index: 88;
       .footer_up_tittle{
           width: 100%;
           height: 50px;
