--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -8,6 +8,9 @@
     max-height: 100%;
     max-width: 100%;
 }
+body .el-message{
+    margin: 38px auto 0;
+}
 body,div,p,h1,h2,h3,h4,h5,h6,ul,ol,li,dl,dd,dt,img,form,header,article,footer{padding:0px; margin:0px; border:0; }
 h1,h2,h3,h4,h5,h6 {font-weight:100;}
 select{ padding:0px; margin:0px; overflow:scroll;}
@@ -157,8 +160,7 @@ html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
                     color: #333;
                     left: 40% ;
            }
-        }
-        
+        }        
     }
     
    //封面的样式   
