--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -106,6 +106,13 @@ html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
            position: absolute;right: 0;top: 0;width: 30px;height: 30px;}
 
            .checkBS_b{
+               >ul{
+                   li{
+                       line-height: 30px;
+                       width: 80%;
+                       margin: 4px 10%;
+                   }
+               }
                width: 100%;
                height: 369px;
                overflow-y: auto;
