--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -111,6 +111,11 @@ html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
                        line-height: 30px;
                        width: 80%;
                        margin: 4px 10%;
+                       .btn_span{
+                         line-height: 30px;
+                         display: inline-block;
+
+                       }
                    }
                }
                width: 100%;
