--- a/src/components/component/oddPrictureEdit/sass/addEdit.scss
+++ b/src/components/component/oddPrictureEdit/sass/addEdit.scss
@@ -51,7 +51,7 @@
                     margin: 20px auto;
                     background: #fff;
                     >select{
-                      width: 100%;  
+                      width: 100%;
                     }
                 }
                 #selec{
@@ -82,7 +82,7 @@
                     left: 0;
                     margin: auto auto;
                     .div_alert{
-                       position: absolute; 
+                       position: absolute;
                         z-index: 1;
                         width: 100%;
                         height: 100%;
@@ -95,8 +95,8 @@
                     .drap_img{
                         position: absolute;
                         z-index: 2;
-                        width: 100%;
-                        height: 100%;
+                        //width: 100%;
+                        //height: 100%;
                     }
                     .img_box{
                         width: 100%;
@@ -107,7 +107,7 @@
                         z-index: 3;
                     }
                 }
-                
+
 //              .img_box {
 //                  width: 100%;
 //                  height: 100%;
@@ -164,10 +164,10 @@
                 text-align: center;
                 font-size: 19px;
             }
-        }   
+        }
        .line_comtent{
         border-bottom: 1px solid #D3D3D6;
-        
+
         .scrollBar{
             overflow-y: auto;
 //          overflow: hidden;
@@ -266,7 +266,7 @@
     }
     }
     }
-  
+
     //底部图片框
    .footer_img{
       width: 100%;
