--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -84,10 +84,9 @@ html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
     #div_drap{
         font-size: 14px;color: #333;background: #fff;
         position: absolute;
-        top: 68px;right: -10px;width: 200px;height: 400px !important;z-index: 8;
+        top: 68px;right: -10px;width: 200px !important;height: 400px !important;z-index: 8;
         border: 1px solid #ccc;
-        width: 12.8125rem;
-        height: 12.8125rem;
+
         box-shadow: 0 10px 10px -6px #777;
         cursor:move;
 
