--- a/src/page/album/album.scss
+++ b/src/page/album/album.scss
@@ -63,7 +63,7 @@
       left: inherit !important;
     }
     .picContainer {
-      border: 1px solid red;
+      //border: 1px solid red;
       position: absolute;
       bottom: 0px;
       left: 0px;
