--- a/src/page/welcome/welcome.scss
+++ b/src/page/welcome/welcome.scss
@@ -33,7 +33,7 @@
   padding-top: 68px;
   color: #333;
   font-family: '\5FAE\8F6F\96C5\9ED1';
-  background: url('./img/jiashu_02.jpg') no-repeat center center;
+  background: url('https://www.artup.com//img/400.jpg') no-repeat center center;
   .subtitle {
     font-size: 18px;
     text-align: center;
