--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -2046,23 +2046,36 @@ body .el-loading-spinner .el-loading-text{
                 width: 40%;
                 padding-top: 11px;
                 .btnStyle {
-                    display: -webkit-box;
-                    display: -moz-box;
-                    display: -ms-flexbox;
-                    display: -webkit-flex;
-                    display: flex;
+
                     width: 80px;
                     height: 30px;
                     border: 1px solid #adadad;
                     border-radius: 3px;
                     cursor: pointer;
-                    padding-left: 5%;
                     padding-top: 4px;
+                    text-align: center;
+                  a{
+                    color: #000;
+                  }
+                  &:hover{
+                    opacity: 0.8;
+                    color: #3a3a3a;
+                  }
+                  &:active{
+                    position: relative;
+                    top:1px;
+                  }
                 }
                 .create {
                     width: 150px;
                     margin-left: 20px;
-                    padding-left: 8%;
+                  &:hover{
+                    opacity: 0.8;
+                  }
+                  &:active{
+                    position: relative;
+                    top:1px;
+                  }
                 }
             }
         }
