--- a/src/page/desk/desk.scss
+++ b/src/page/desk/desk.scss
@@ -1,3 +1,5 @@
+import 'static/font/iconfont.css'
+
 .container {
     width: 1280px;
     margin: 0 auto;
@@ -130,7 +132,7 @@
             margin-bottom: 25px;
             width: 100%;
             float: left;
-            
+
         }
         .sizeBox {
             width: 432px;
@@ -161,7 +163,7 @@
                 }
         }
         .frameBox {
-           
+
             width: 482px;
             float: left;
             /* height: 384px; */
@@ -198,7 +200,7 @@
                     align-items: center;
                     justify-content: center;
                 }
-                
+
             }
         }
         .rightBottom {
