--- a/src/page/desk/desk.scss
+++ b/src/page/desk/desk.scss
@@ -70,8 +70,8 @@ import 'static/font/iconfont.css'
             background-size: 100% 100% !important;
          }
         .boxA{
-            width: 255px;
-            height: 355px;
+            width: 410px;
+            height: 306px;
             position: absolute;
             bottom: 0px;
             left: 0px;
@@ -79,8 +79,8 @@ import 'static/font/iconfont.css'
             box-sizing: content-box;
         }
         .boxB{
-            width: 355px;
-            height: 255px;
+            width: 306px;
+            height: 410px;
             position: absolute;
             bottom: 0px;
             left: 0px;
@@ -207,7 +207,7 @@ import 'static/font/iconfont.css'
             width: 425px;
             height: 32px;
             margin: 65px 0;
-            float: left;
+            //float: left;
             .showPrice {
                 font-size: 24px;
                 height: 50px;
