--- a/src/page/framed-pictures/framed-pictures.scss
+++ b/src/page/framed-pictures/framed-pictures.scss
@@ -205,7 +205,7 @@ import 'static/font/iconfont.css'
       width: 425px;
       height: 32px;
       margin: 65px 0;
-      float: left;
+      //float: left;
       .showPrice {
         font-size: 24px;
         height: 50px;
