--- a/src/page/poster/poster.scss
+++ b/src/page/poster/poster.scss
@@ -88,8 +88,8 @@ import 'static/font/iconfont.css'
       box-sizing: border-box;
     }
     .boxC {
-      width: 325px;
-      height: 325px;
+      width: 481px;
+      height: 344.5px;
       position: absolute;
       bottom: 0px;
       left: 0px;
@@ -106,8 +106,9 @@ import 'static/font/iconfont.css'
       box-sizing: border-box;
     }
     .boxE {
-      width: 481px;
-      height: 344.5px;
+
+      width: 325px;
+      height: 325px;
       position: absolute;
       bottom: 0px;
       left: 0px;
@@ -205,7 +206,7 @@ import 'static/font/iconfont.css'
       width: 425px;
       height: 32px;
       margin: 65px 0;
-      float: left;
+      //float: left;
       .showPrice {
         font-size: 24px;
         height: 50px;
