--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -807,6 +807,7 @@ html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
       position: relative;
       bottom: 0;
       left: 0;
+      z-index: 999;
       .footer_up_tittle{
           width: 100%;
           height: 50px;
