--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -1,3 +1,8 @@
+.bg_cover{  //背景绝对剧中
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50%;
+}
 .pubCenter{
     position: absolute;
     left: 0;
