--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -2129,3 +2129,20 @@ body .el-loading-spinner .el-loading-text{
         }
     }
 }
+//lomo卡自定义样式
+.lomoTemplate .bbs_hengban{
+    width: 253px !important;
+    height: 170px !important;
+    margin: 13px auto !important;
+}
+//body .lomoTemplate {
+//  width: 128px;
+//  height: 180px;
+//  margin: 10px auto 6px;
+//  background-color: #d2d2d2;
+//}
+body .lomoTemplate .template04 {
+  width: 128px!important;
+  height: 147.53px!important;
+  margin: 24px auto!important;
+}
