--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -1,4 +1,30 @@
-.bg_cover{  //背景绝对剧中
+//谷歌浏览器滚动条
+::-webkit-scrollbar
+{
+  width: 10px;
+  height: 10px;
+}
+::-webkit-scrollbar-track-piece
+{
+  background-color: #CCCCCC;
+  -webkit-border-radius: 6px;
+}
+::-webkit-scrollbar-thumb:vertical
+{
+  height: 5px;
+  background-color: #999999;
+  -webkit-border-radius: 6px;
+}
+::-webkit-scrollbar-thumb:horizontal
+{
+  width: 5px;
+  background-color: #CCCCCC;
+  -webkit-border-radius: 6px;
+}
+
+
+//背景绝对剧中
+.bg_cover{
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50%;
@@ -573,14 +599,14 @@ html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
                     }
                     .template02{
                        width: 124px;
-                        height: 167px;
-                        margin: 14px auto 15px;
+                        height: 165.4px;
+                        margin: 15.3px auto 15.3px;
                          background-color: #d2d2d2;
                     }
                     .template03{
                         width: 128px;
                         height: 180px;
-                        margin: 10px auto 6px;
+                        margin: 8px auto 8px;
                         .div_page{
                             width: 100%;
                             height: 88px;
@@ -592,13 +618,13 @@ html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
                         }
                     }
                     .template04{
-                         width: 128px;
-                        height: 180px;
-                        margin: 10px auto 6px;background-color: #d2d2d2;
+                        width: 128px;
+                        height: 185.36px;
+                        margin: 5px auto 5.64px;background-color: #d2d2d2;
                     }
                     .template05{
                         width: 128px;
-                        height: 88px;
+                        height: 88.27px;
                         background-color: #d2d2d2;
                          margin: 64px auto 44px;
                     }
@@ -609,7 +635,7 @@ html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
                         margin: 53px auto 49px;
                         .div_page{
                             width: 60px;
-                            height: 100%;
+                            height: 90px;
                             float: left;
                             background-color: #d2d2d2;
                         }
@@ -1108,7 +1134,7 @@ html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
                 }
             }
             .upload_inbox {
-                padding: 20px;
+                padding: 15px;
                 position: relative;
                 height: 410px;
 //              width: 660px;
@@ -2129,18 +2155,17 @@ body .el-loading-spinner .el-loading-text{
         }
     }
 }
+//宝宝书自定义样式
+.bbs_size .template02{
+
+}
+
 //lomo卡自定义样式
 .lomoTemplate .bbs_hengban{
     width: 253px !important;
     height: 170px !important;
     margin: 13px auto !important;
 }
-//body .lomoTemplate {
-//  width: 128px;
-//  height: 180px;
-//  margin: 10px auto 6px;
-//  background-color: #d2d2d2;
-//}
 body .lomoTemplate .template04 {
   width: 128px!important;
   height: 147.53px!important;
