--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -54,7 +54,8 @@ input { padding:0px; margin:0px;outline:none;}
 .clear { clear:both; font-size:0px; height:0px; overflow:hidden;}
 a:link, a:visited { text-decoration:none;}
 a:hover { text-decoration:none;}
-body{word-wrap:break-word;display:box;display: -webkit-box;-webkit-box-orient: vertical;box-orient:vertical;}
+body{word-wrap:break-word;display:box;display: -webkit-box;-webkit-box-orient: vertical;box-orient:vertical;overflow: inherit!important;}
+
 html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
 //#handers{
 //  .head{height: 50px;background: #2e2e2e;min-width: 1152px;}
