提交合集产品

--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -486,6 +486,7 @@ html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
                       .title_pu{
                               border: 1px solid #d2d2d2;
                               box-sizing: border-box;overflow: hidden;
+                              position: relative;
                       }
                       .mainTitle{
                           width:140px;
@@ -520,7 +521,7 @@ html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
 
                       .title_pu{
                               border: 1px solid #d2d2d2;
-                              box-sizing: border-box;overflow: hidden;
+                              box-sizing: border-box;overflow: hidden;position: relative;
                       }
                       .mainTitle{
                           width:100px;
@@ -544,7 +545,7 @@ html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
 
                      .title_pu{
                               border: 1px solid #d2d2d2;
-                              box-sizing: border-box;overflow: hidden;
+                              box-sizing: border-box;overflow: hidden;position: relative;
                       }
                       .mainTitle{
                           width:140px;
@@ -568,6 +569,24 @@ html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
                 .time_pu{
                     position: relative;
                     .bbsClass{
+                      .text_span{
+                        //position: relative;
+                        //text-align: center;
+                        //width: 100%;
+                        //display: block;
+                      }
+                      .text_12{
+                        //height: 20px;
+                        //position: absolute;
+                        //word-break: break-all;
+                        //word-wrap: break-word;
+                        //line-height: 1;
+                        //transform-origin: left top 0px;
+                        //font-size: 12px;
+                        //transform: scale(0.93981);
+                        //left: 0px;
+                        //top: 0px;
+                      }
                        overflow: hidden;
                        position: relative;
                        .drap_img{
@@ -2171,4 +2190,27 @@ body .lomoTemplate .template04 {
   width: 128px!important;
   height: 147.53px!important;
   margin: 24px auto!important;
+}
+//合集编辑
+
+#hejiEdit{
+
+  .pubilc_heji_div{
+    background: #fff;
+  }
+  .time_bg{
+    width: 232px;
+    height: 204px;
+    .page{
+      height: 42px;
+    }
+  }
+  .bbs_hengban{
+    width:212px;
+    height: 142px;
+    margin:11px;
+  }
+  .pageleft{
+    text-indent:100px;
+  }
 }
