--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -714,6 +714,7 @@ html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
                         background: #efefef;
                         color: #333;
                         margin-top: 4px;
+                        position: relative;
                         >div{
                             width: 50%;
                             float: left;
@@ -2228,6 +2229,14 @@ body .lomoTemplate .template04 {
       height: 194px;
       position: relative;
       .firstPage{
+        background: #1d1c19;
+        height:168px ;
+        .page_bg{
+          height:168px;
+        }
+      }
+      .lastPage{
+        background: #efefef;
         height:168px ;
         .page_bg{
           height:168px;
@@ -2243,8 +2252,66 @@ body .lomoTemplate .template04 {
         top:0;
         left:0;
         box-sizing: border-box;border-left: 1px solid #efefef;
+
+        //如果有页脚和封底的时候
+        .page_b{
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          display: block;
+          z-index: 99;
+          text-align: center;
+          background:#efefef;
+        }
+        .title_strong{
+          display: block;
+          text-align: center;
+          line-height: 20px;
+          color: #8b682a;
+
+        }
+        .title_strong2{
+          display: block;
+          text-align: center;
+          font-weight: 400;
+          font-size: 13px;
+          color: #adadad;
+          line-height: 16px;
+        }
+        //旅行记尾部
+        .template_lxj_100{
+          width: 58px;
+          height: 58px;
+          margin:55px auto;
+        }
+        .template_lxj_0{ //首页
+          width: 136px;
+          height: 84px;
+          margin: 0 auto;
+          margin-top: 26px;
+          margin-bottom: 18px;
+        }
+        .template_lxj_1{
+          width: 162px;
+          height: 194px;
+          .mainTitle{
+            height: 12px;
+            line-height: 12px;
+            font-size: 12px;
+            width: 100px;
+            margin-left: 42px;
+            margin-top: 40px;
+          }
+          .box_text{
+            width: 108px;
+            height: 58px;
+            margin-top: 14px;
+            margin-bottom: 44px;
+            margin-left: 42px;
+          }
+        }
         .template_lxj_2{
-          margin:20px 18px;
+          margin:20px auto;
         }
         .template_lxj_3{
           width: 106px;
@@ -2265,6 +2332,34 @@ body .lomoTemplate .template04 {
           width: 139px;
           height: 96px;
           margin:28px auto;
+          .div_page{
+            width: 66px;
+            height: 96px;
+          }
+        }
+        .template_lxj_7{
+          width: 140px;
+          height: 92px;
+          margin:30px auto;
+          .div_page{
+            width: 66px;
+            height: 92px;
+            .div_lxj{
+              height: 44px;
+              background: #d2d2d2;
+              position: relative;
+              overflow: hidden;
+            }
+            .div_lxj:nth-child(2){
+              margin-top: 4px;
+            }
+          }
+          .div_page:nth-child(1){
+            width: 70px;
+          }
+          .div_page:nth-child(2){
+            background: #fff;
+          }
         }
       }
     }
